<resources>

    <string name="app_name">Who Wants To Be A Millionaire</string>
    <string name="menu_credits">Credits</string>
    <string name="title_activity_main">Who Wants To Be A Millionaire - Home</string>
    <string name="play">Play!</string>
    <string name="scores">Scores</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Who Wants To Be A Millionaire - Settings</string>
    <string name="title_activity_play">Who Wants To Be A Millionaire - Play</string>
    <string name="title_activity_score">Who Wants To Be A Millionaire - Scores</string>
    <string name="player_name">Name</string>
    <string name="question_nb_lbl">Question: </string>
    <string name="level_lbl">Play for: </string>
    <string name="local_tab_title">Local Scores</string>
    <string name="friends_tab_title">Friends Scores</string>
    <string name="menu_clean_scores">Delete local scores</string>
    <string name="menu_jokers_phone">Phone</string>
    <string name="menu_jokers_fifty">50%</string>
    <string name="menu_jokers_audience">Audience</string>
    <string name="hint_player_name">Player Name</string>
    <string name="connection_error_message">Connection Problems: your friends\' scores \n cannot be downloaded.</string>
    <string name="you_won_dialog">You won!!!</string>
    <string name="you_lost_dialog">You lost!!!</string>
    <string name="choice_next_dialog">Right answer !!! \n Do you want to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="audience_answer">The audience thinks the right answer is: \n</string>
    <string name="phone_answer">Your friend thinks the right answer is: \n</string>
    <string name="settings_help_number">Allowed jokers</string>
    <string name="add_friend_button">Add Friend</string>
    <string name="hint_add_friend">Friend name</string>
    <string name="alert_msg_friend_score">If you want to see your friends\' score, you must set your username and add friends in the Settings.</string>
    <string name="alert_msg_add_friend">To add friends, you have to set your username first and to type your friend name.</string>
    <string name="alert_msg_add_friend_http">Connexion problems: your friend could not be added. Retry later.</string>
	<string name="credits_msg">Android application inspired by the \"Who Wants To Be A Millionaire\" TV show...</string>
    <string name="home_title">Home</string>
    <string name="credits_title">Credits</string>
    <string name="play_title">Play</string>
    <string name="settings_title">Settings</string>
    <string name="scores_title">Scores</string>
    
    <string name="send_score_url">http://soletaken.disca.upv.es:8080/WWTBAM/rest/highscores</string>
    <string name="add_friend_url">http://soletaken.disca.upv.es:8080/WWTBAM/rest/friends</string>
    
    <string-array name="strNbHelp">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>